<resources>
    <string name="app_name">BarTender</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="action_logout">Logout</string>
    <string name="action_today">Today</string>
    <string name="action_week_ago">A week ago</string>
    <string name="action_month_ago">A month ago</string>
    <string name="statistics">Statistics</string>
    <string name="cocktails_tried">Collection</string>
    <string name="consumed_today">Consumed</string>
    <string name="consume">Consume</string>
    <string name="type_selection">Consumption type</string>
    <string name="type_neutral">Neutral</string>
    <string name="type_bars">Bars</string>

    <string name="input_name">Enter drink name&#8230;</string>
    <string name="drinks_spinner">Select drink &#8230;</string>
    <string name="quantity_lbl">Quantity:</string>
    <string name="amount_lbl">Amount:</string>
    <string name="price_lbl">Price:</string>
    <string name="quantity_hint">1</string>
    <string name="currency">lv</string>
    <string name="ml">ml.</string>
    <string name="amount_hint">250</string>
    <string name="price_hint">10</string>
    <string name="alc_vol_lbl">Alcohol Volume:</string>
    <string name="alc_vol_hint">4.5</string>
    <string name="percent">%</string>
    <string name="total_price_lbl">Total Price:</string>
    <string name="total_price">Total Price: %,.2f lv.</string>
    <string name="total_amount">Total Amount: %.0f ml.</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="loading">Loading&#8230;</string>
    <string name="bartenderLogo">BarTender</string>
    <string name="spinner_default">Select drink name&#8230;</string>
    <string name="amount_preselected">%.0f ml.</string>
    <string name="price_predefined">%,.2f lv.</string>
    <string name="alc_volume_predefined">%.1f %%</string>
    <string name="action_clear_filter">Clear</string>
    <string name="nav_drinks">Drinks stats</string>
    <string name="nav_money">Money stats</string>
    <string name="nav_pie_bars">Bars stats</string>
    <string name="drink">Drink name</string>
    <string name="price">Price</string>
    <string name="actual_cost">$ %.0f</string>
    <string name="actual_percent">%.1f %%</string>
    <string name="total_cost">$ %.0f</string>
    <string name="total">Total</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="drinks_stat_title">Drinks Statistics</string>
    <string name="money_stat_title">Money Statistics</string>
    <string name="bars_stat_title">Bars Statistics</string>
</resources>
