<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fff"
        android:clickable="true"
        android:isScrollContainer="true"
        android:orientation="vertical"
        tools:context=".ui.consume.NeutralConsumptionFragment">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            android:src="@drawable/bg2" />

        <TextView
            android:id="@+id/txtBarName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#95000000"
            android:fontFamily="sans-serif-condensed-light"
            android:padding="8dp"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="26sp" />

        <androidx.cardview.widget.CardView
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtBarName"
            android:layout_margin="20dp"
            android:elevation="6dp"
            app:cardCornerRadius="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="30dp">

                <Spinner
                    android:id="@+id/etDrinkNames"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:hint="@string/drinks_spinner"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:textStyle="bold|italic" />

                <ImageView
                    android:id="@+id/imgDrink"
                    android:layout_width="130dp"
                    android:layout_height="130dp"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/def_no_image_drink" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/amount_lbl"
                        android:textAlignment="viewEnd"
                        android:textSize="16sp"
                        android:textStyle="bold|italic" />

                    <TextView
                        android:layout_width="2dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:background="#000" />

                    <TextView
                        android:id="@+id/etAmount"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/amount_preselected"
                        android:textSize="16sp" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/price_lbl"
                        android:textAlignment="viewEnd"
                        android:textSize="16sp"
                        android:textStyle="bold|italic" />

                    <TextView
                        android:layout_width="2dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:background="#000" />

                    <TextView
                        android:id="@+id/etPrice"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/price_predefined"
                        android:textSize="16sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/alc_vol_lbl"
                        android:textAlignment="viewEnd"
                        android:textSize="16sp"
                        android:textStyle="bold|italic" />

                    <TextView
                        android:layout_width="2dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:background="#000" />

                    <TextView
                        android:id="@+id/etAlcVol"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/alc_volume_predefined"
                        android:textSize="16sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/quantity_lbl"
                        android:textAlignment="viewEnd"
                        android:textSize="16sp"
                        android:textStyle="bold|italic" />

                    <TextView
                        android:layout_width="2dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:background="#000" />

                    <EditText
                        android:id="@+id/etQuantity"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/quantity_hint"
                        android:inputType="number"
                        android:textSize="16sp" />

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="4dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="2dp"
                    android:background="#90000000" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text=""
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/txtTotalPrice"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="4"
                        android:background="#90000000"
                        android:hint="@string/total_price"
                        android:padding="8dp"
                        android:textAlignment="viewEnd"
                        android:textColor="#ffffff"
                        android:textSize="18sp"
                        android:textStyle="bold|italic" />
                </LinearLayout>
            </LinearLayout>

        </androidx.cardview.widget.CardView>


        <Button
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/container"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:background="@drawable/dark_button"
            android:text="@string/save"
            android:textColor="@color/light"
            android:textSize="18sp"
            android:textStyle="bold|italic" />

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btnSave"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="25dp"
            android:background="@drawable/dark_button"
            android:text="@string/cancel"
            android:textColor="@color/light"
            android:textSize="18sp"
            android:textStyle="bold|italic" />

    </RelativeLayout>
</ScrollView>