<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:src="@drawable/bg2" />

    <TextView
        android:id="@+id/topText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:padding="20dp"
        android:textStyle="italic"
        android:textAlignment="center"
        android:textColor="#444"
        android:fontFamily="casual"
        android:text="Welcome to BarTender"
        android:textSize="28sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="6dp"
        android:layout_marginTop="100dp"
        android:layout_marginRight="6dp"
        android:gravity="end"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:alignmentMode="alignMargins"
            android:columnOrderPreserved="false">

            <androidx.cardview.widget.CardView
                android:id="@+id/consume"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:clickable="true"
                android:elevation="6dp"
                android:onClick="onMenuItemClick"
                app:cardCornerRadius="15dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="76dp"
                        android:layout_height="76dp"
                        android:background="@drawable/drink" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="15dp"
                        android:paddingTop="8dp"
                        android:paddingRight="15dp"
                        android:paddingBottom="8dp"
                        android:fontFamily="casual"
                        android:text="@string/consume"
                        android:textStyle="bold"
                        android:textSize="19sp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/consumedToday"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:clickable="true"
                android:elevation="6dp"
                android:onClick="onMenuItemClick"
                app:cardCornerRadius="15dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="76dp"
                        android:layout_height="76dp"
                        android:background="@drawable/ic_bar_dark_24dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="15dp"
                        android:paddingTop="8dp"
                        android:paddingRight="15dp"
                        android:paddingBottom="8dp"
                        android:textStyle="bold"
                        android:fontFamily="casual"
                        android:text="@string/consumed_today"
                        android:textSize="19sp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:alignmentMode="alignMargins"
            android:columnOrderPreserved="false">

            <androidx.cardview.widget.CardView
                android:id="@+id/collection"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:clickable="true"
                android:elevation="6dp"
                android:onClick="onMenuItemClick"
                app:cardCornerRadius="15dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="76dp"
                        android:layout_height="76dp"
                        android:background="@drawable/collection"
                        android:padding="10dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="15dp"
                        android:paddingTop="8dp"
                        android:paddingRight="15dp"
                        android:paddingBottom="8dp"
                        android:fontFamily="casual"
                        android:text="@string/cocktails_tried"
                        android:textStyle="bold"
                        android:textSize="19sp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/statistics"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:clickable="true"
                android:elevation="6dp"
                android:onClick="onMenuItemClick"
                app:cardCornerRadius="15dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="76dp"
                        android:layout_height="76dp"
                        android:background="@drawable/ic_statistics_dark_24dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="15dp"
                        android:paddingTop="8dp"
                        android:paddingRight="15dp"
                        android:paddingBottom="8dp"
                        android:textStyle="bold"
                        android:fontFamily="casual"
                        android:text="@string/statistics"
                        android:textSize="19sp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </LinearLayout>


    <!--    <Button-->
    <!--        android:id="@+id/btn_consume"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="0dp"-->
    <!--        android:layout_weight="1"-->
    <!--        android:background="@drawable/consume"-->
    <!--        android:text="@string/consume"-->
    <!--        android:textStyle="bold"-->
    <!--        android:textColor="#FFFFFFFF"-->
    <!--        android:layout_margin="30dp"-->
    <!--        android:textSize="30sp" />-->

    <!--    <Button-->
    <!--        android:id="@+id/btn_consumed_today"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="0dp"-->
    <!--        android:layout_weight="1"-->
    <!--        android:background="@drawable/consumations"-->
    <!--        android:text="@string/consumedToday"-->
    <!--        android:textStyle="bold"-->
    <!--        android:textColor="#FFFFFFFF"-->
    <!--        android:layout_margin="30dp"-->
    <!--        android:textSize="30sp" />-->

    <!--    <Button-->
    <!--        android:id="@+id/btn_cocktails_tried"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="0dp"-->
    <!--        android:layout_weight="1"-->
    <!--        android:background="#990044"-->
    <!--        android:layout_margin="30dp"-->
    <!--        android:text="@string/cocktailsTried"-->
    <!--        android:textStyle="bold"-->
    <!--        android:textColor="#FFFFFFFF"-->
    <!--        android:textSize="30sp" />-->

    <!--    <Button-->
    <!--        android:id="@+id/btn_statistics"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="0dp"-->
    <!--        android:layout_weight="1"-->
    <!--        android:background="@drawable/cocktails"-->
    <!--        android:text="@string/statistics"-->
    <!--        android:textStyle="bold"-->
    <!--        android:textColor="#FFFFFFFF"-->
    <!--        android:layout_margin="30dp"-->
    <!--        android:textSize="30sp" />-->
</RelativeLayout>